# swiffer

./: .gitignore  README.md  pyproject.toml
swiffer/: cleaner.py  cli.py
